--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="content"></div>
+  <div id="content">
+  </div>
 </body>
 <script type="module" src="/src/main.tsx"></script>
 </html>
